--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Sans&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@700&family=Pacifico&family=Public+Sans:wght@400;700;800&family=Redacted+Script&display=swap"
+      rel="stylesheet">
 
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
